force-app/main/default/objects/Unit_Response__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <description>Draft : Apenas creamos el registro, este estado existe. Hasta que no creemos los registros relacionados con las preguntas y opciones marcadas no podremos evaluarlo. Por eso, necesitamos este primer estado. Una vez que terminemos de crear los registros relacionados con las respuestas a las preguntas podremos pasarlo de estado.

Answered : Se pasará a este estado una vez que hayamos terminado de cargar todas las respuestas para esa unidad.

Success : Caeremos en este estado una vez verificado el resultado y que el mismo sea correcto.

Fail : En el caso de que alguna de las preguntas haya sido respondida incorrectamente.</description>
    <label>State</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Answered</fullName>
            </value>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Fail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>