force-app/main/default/objects/Unit_Response__c/fields/Tries__c.field-meta.xml
<CustomField>
    <fullName>Tries__c</fullName>
    <label>Tries</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>