force-app/main/default/objects/Unit_Response__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Unit</label>
    <referenceTo>Unity__c</referenceTo>
    <relationshipLabel>Units Responses</relationshipLabel>
    <relationshipName>Units_Responses</relationshipName>
    <type>Lookup</type>
</CustomField>